<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
          >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_language"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:accessibilityHeading="true"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/go_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:textAllCaps="false"
                android:background="@color/gray"
                android:layout_marginStart="8dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="200dp">

                <ImageButton
                    android:id="@+id/nl_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_nl"
                    android:contentDescription="@string/content_desc_nl"/>

                <ImageButton
                    android:id="@+id/de_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_de"
                    android:contentDescription="@string/content_desc_de"
                    />

                <ImageButton
                    android:id="@+id/gb_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_gb"
                    android:contentDescription="@string/content_desc_gb"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
